@@ -1,4 +1,5 @@
 Version 0.9.2 (changes from aircrack-ng 0.9.1) - Released ?? ??? 2007:
+* aireplay-ng: Now works with rtc_cmos
 * airodump-ng: Fixed: Wrong information printed in CSV file (PSK for WEP with Shared key instead of SKA).
 * airdecap-ng: Fixed bug in calc_pmk() function causes wrong PMK to be computed
 * airmon-ng: Fixed detection of N770 wireless interface
